Source/WebKit/GPUProcess/media/RemoteAudioSessionProxy.cpp
@@ -91,9 +91,14 @@ void RemoteAudioSessionProxy::setPreferredBufferSize(uint64_t size)
 void RemoteAudioSessionProxy::tryToSetActive(bool active, SetActiveCompletion&& completion)
 {
     auto success = audioSessionManager().tryToSetActiveForProcess(*this, active);
+    bool hasActiveChanged = success && m_active != active;
     if (success)
         m_active = active;
+
     completion(success);
+
+    if (hasActiveChanged)
+        configurationChanged();
 
     audioSessionManager().updatePresentingProcesses();
 }
